<resources>
    <string name="app_name">sickdan</string>
    <string name="app_name_kor">식단</string>
    <string name="signin_btn_text">로그인</string>
    <string name="signup_btn_text">회원가입</string>
    <string name="id_tv_text">아이디</string>
    <string name="email_tv_text">이메일</string>
    <string name="password_tv_text">비밀번호</string>
    <string name="password_re_tv_text">비밀번호 확인</string>
    <string name="displayname_tv_text">닉네임</string>

    <string name="ed_id_hint">아이디</string>
    <string name="ed_password_hint">비밀번호</string>
    <string name="ed_password_re_hint">비밀번호 확인</string>
    <string name="ed_displayname_hint">보여지는 이름</string>
    <string name="ed_email_hint">abc@def.com</string>

    <string name="preference_name">info</string>
    <string name="token_key">jwt.token</string>

    <string name="calendar_sunday">일</string>
    <string name="calendar_monday">월</string>
    <string name="calendar_tuesday">화</string>
    <string name="calendar_wednesday">수</string>
    <string name="calendar_thursday">목</string>
    <string name="calendar_friday">금</string>
    <string name="calendar_saturday">토</string>

    <string name="calendar_prev_text">이전</string>
    <string name="calendar_next_text">다음</string>
    <string name="kakao_app_key">895cb9bd734806014d10c4386b15260e</string>

    <string name="nav_menu_calendar">Calendar</string>
    <string name="nav_menu_friend">Friends</string>
    <string name="nav_menu_stat">Statistics</string>

    <string name="meal_delete_message">삭제 시 사진정보도 함께 삭제됩니다.\n정말 삭제하시겠습니까?</string>
    <string name="meal_delete_fire">삭제</string>
    <string name="meal_delete_cancel">취소</string>

    <string name="notification_title">식단</string>
    <string name="notification_message">만보기 작동 중</string>
    <string name="ticker_text">sickdan</string>

    <string name="my_code">내 코드</string>
    <string name="friend_code">친구 코드</string>
    <string name="friend_request">요청</string>

    <string name="comment_title">댓글</string>
    <string name="comment_hint">댓글 달기</string>
</resources>
