<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_calender_top"
                android:text="@string/calendar_sunday"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_dark"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_calender_top"
                android:textColor="@color/textGray1"
                android:text="@string/calendar_monday"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_calender_top"
                android:textColor="@color/textGray1"
                android:text="@string/calendar_tuesday"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_calender_top"
                android:textColor="@color/textGray1"
                android:text="@string/calendar_wednesday"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_calender_top"
                android:textColor="@color/textGray1"
                android:text="@string/calendar_thursday"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_calender_top"
                android:textColor="@color/textGray1"
                android:text="@string/calendar_friday"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_calender_top"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/calendar_saturday"
                android:textSize="12sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frg_calendar_rcv_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"/>
    </LinearLayout>
</layout>