<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainGreen"
        tools:context=".view.SigninActivity">

        <TextView
            android:id="@+id/act_signin_tv_title"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/bold_round"
            android:gravity="center"
            android:letterSpacing="0.6"
            android:text="@string/app_name_kor"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintBottom_toBottomOf="@id/act_signin_ed_id"
            app:layout_constraintEnd_toStartOf="@id/act_signin_ed_id"
            app:layout_constraintTop_toTopOf="@id/act_signin_ed_id" />

        <EditText
            android:id="@+id/act_signin_ed_id"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="65dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/ed_id_hint"
            android:textCursorDrawable="@null"
            android:inputType="textPersonName"
            android:focusableInTouchMode="true"
            android:paddingLeft="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hintTextWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/act_signin_tv_title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_baseline_lock_24"
            app:layout_constraintBottom_toBottomOf="@id/act_signin_ed_password"
            app:layout_constraintEnd_toStartOf="@id/act_signin_ed_password"
            app:layout_constraintTop_toTopOf="@id/act_signin_ed_password" />

        <EditText
            android:id="@+id/act_signin_ed_password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/ed_password_hint"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:focusableInTouchMode="true"
            android:paddingLeft="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hintTextWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/act_signin_ed_id" />

        <Button
            android:id="@+id/act_signin_btn_signin"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/signin_btn_text"
            android:textColor="@color/mainGreen"
            android:background="@drawable/bg_btn_fill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/act_signin_ed_password" />

        <Button
            android:id="@+id/act_signin_btn_signup"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/signup_btn_text"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_btn_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/act_signin_btn_signin" />

        <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
            android:id="@+id/act_signin_btn_naver"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_naver"
            app:layout_constraintEnd_toStartOf="@id/act_signin_gl_center"
            app:layout_constraintTop_toBottomOf="@id/act_signin_btn_signup" />

        <ImageButton
            android:id="@+id/act_signin_btn_kakao"
            android:src="@drawable/ic_kakao"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintStart_toEndOf="@id/act_signin_gl_center"
            app:layout_constraintTop_toTopOf="@id/act_signin_btn_naver" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/act_signin_gl_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>